* Fixed: CSS padding for post status on wrapped lines.

--- a/css/poststatuses.css
+++ b/css/poststatuses.css
@@ -1,104 +1,72 @@
 /*------------------------------------------------------------------------------
   1.0 - Post Statuses
 ------------------------------------------------------------------------------*/
+.post-state .draft,
+.post-state .password-protected, 
+.post-state .pending,
+.post-state .protected,
+.post-state .scheduled,
+.post-state .sticky
+ {
+	position:relative;
+	padding: 1px 5px;
+	font-size: 90%;
+	font-weight: bold;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+}
 
 /* Pending */
 .post-state .pending {
-	position:relative;
-	top:-1px;
-	padding:2px 5px;
-	color:#000;
-	font-weight:bold;
-	font-size: 90%;
-	text-shadow:rgba(255,255,255,0.6) 0 1px 0;
+	color: #fff;
+	text-shadow: rgba(255,255,255,0.6) 0 1px 0;
 	background: #EFCB3B;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
 	border: 1px solid #DBA811;
 }
 
 /* Draft */
 .post-state .draft {
-	position:relative;
-	top:-1px;
-	padding:2px 5px;
-	color:#fff;
-	font-size: 90%;
-	font-weight:bold;
-	text-shadow:rgba(0,0,0,0.7) 0 -1px 0;
+	color: #fff;
+	text-shadow: rgba(0,0,0,0.7) 0 -1px 0;
 	background: #c10c05;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
 	border: 1px solid #870804;
 }
 
 /* Sticky */
 .post-state .sticky {
-	position:relative;
-	top:-1px;
-	padding:2px 5px;
-	color:#fff;
-	font-size: 90%;
-	font-weight:bold;
-	text-shadow:rgba(0,0,0,0.7) 0 -1px 0;
+	color: #fff;
+	text-shadow: rgba(0,0,0,0.7) 0 -1px 0;
 	background: #3db0eb;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
 	border: 1px solid #277fac;
 }
 
 /* Private */
 .post-state .private {
-	position:relative;
-	top:-1px;
-	padding:2px 5px;
-	color:#000;
-	font-size: 90%;
-	font-weight:bold;
-	text-shadow:rgba(255,255,255,1) 0 1px 0;
-	background:#fff;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
+	text-shadow: rgba(255,255,255,1) 0 1px 0;
+	background: #fff;
 	border: 1px solid #ddd;
 }
 
 /* Password Protected */
-.post-state .password-protected, .post-state .protected {
-	position:relative;
-	top:-1px;
-	padding:2px 5px;
-	color:#fff;
-	font-weight:bold;
+.post-state .password-protected, 
+.post-state .protected {
+	color: #fff;
 	text-shadow:rgba(0,0,0,1) 0 -1px 0;
-	background:#333;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
+	background: #333;
 	border: 1px solid #222;
 }
 
 /* Scheduled Posts */
 .post-state .scheduled {
-	position:relative;
-	top:-1px;
-	padding:2px 5px;
-	color:#fff;
-	font-weight:bold;
-	text-shadow:rgba(0,0,0,1) 0 -1px 0;
-	background:#006600;
-	border-radius:4px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
+	color: #fff;
+	text-shadow: rgba(0,0,0,1) 0 -1px 0;
+	background: #006600;
 	border: 1px solid #222;
 } 
 
-/* Remove invisibility cloak for non-linked
-post titles. (non-admin users) */
+/* Remove invisibility cloak for non-linked post titles. (non-admin users) */
 .author-other strong,
 .alternate.author-other strong {
-	color:#555;
+	color: #555;
 }
